package name changed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qubicpatient-ws",
+  "name": "cubezix",
   "version": "1.0.0",
   "description": "rest webservice for patient",
   "main": "app.js",
